map includes in profiles

--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -23,7 +23,7 @@ These streams have flow regimes with high velocity and relatively low but reliab
 
 In steep to moderate terrain throughout the humid tropical and temperate zones, rarely extending to boreal latitudes.
 
-<img src="../assets/maps/F1_1.png" width="100%">
+{% include MAP.html %}
 
 **Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. Major occurrences in red, minor occurrences in yellow.
 
