--- a/_EFGs/F1.2.md
+++ b/_EFGs/F1.2.md
@@ -23,9 +23,9 @@ These rivers are distinguished by shallow gradients (typically <2°), with low t
 
 Permanent lowland rivers are distributed throughout tropical and temperate lowlands, very uncommon in arid subtropical –warm temperate zones and absent from boreal zones.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 
