--- a/_EFGs/F1.5.md
+++ b/_EFGs/F1.5.md
@@ -19,13 +19,12 @@ These rivers are driven by cyclical seasonal flow regimes. High-volume  flows an
 
 Monsoonal regions of Asia, Africa, Australia and the Americas.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
 * Douglas MM, Bunn SE, Davies PM (2005) River and wetland food webs in Australia's wet-dry tropics: general principles and implications for management. Marine and Freshwater Research 56: 329-342 / Layman CA, Winemiller KO, Arrington DA, Jepsen DB (2005) Body size and trophic position in a diverse tropical food web. Ecology 86:2530-2535.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
