--- a/_EFGs/F1.6.md
+++ b/_EFGs/F1.6.md
@@ -19,13 +19,12 @@ These systems are distinguished by highly episodic flows and flood regimes. Long
 
 Throughout the world in arid and semi-arid mid latitudes, lowlands and uplands, but rarely above 1500m.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
 * Kingsford RT, (2006) Ecology of desert rivers. Cambridge University Press, Cambridge.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
