--- a/_EFGs/F2.5.md
+++ b/_EFGs/F2.5.md
@@ -23,9 +23,9 @@ Arid climates have highly variable hydrology. Episodic inundation after rain is 
 
 Semi-arid and arid regions at mid latitudes of the Americas, Africa, west and Asia and Australia.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
