--- a/_EFGs/F2.6.md
+++ b/_EFGs/F2.6.md
@@ -19,9 +19,9 @@ Permanent salt lakes tend to be large and restricted to semi-arid climates with 
 
 Mostly in semi-arid regions of Africa, Australia, Eurasia and western parts of North and South America.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
