--- a/_EFGs/F2.7.md
+++ b/_EFGs/F2.7.md
@@ -19,13 +19,12 @@ Ephemeral salt lakes are up to 10,000 km2 in area, and usually less than a few m
 
 Mostly in arid and semi-arid Africa, Eurasia, Australia and north and south America.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
 * Seaman MT, Ashton PJ, Williams WD (1991) Inland salt waters of southern Africa. Hydrobiologia 210: 75-91. / Williams WD (1998) Salinity as a determinant of the structure of biological communities in salt lakes. Hydrobiologia 381: 191-201.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
