--- a/_EFGs/F2.9.md
+++ b/_EFGs/F2.9.md
@@ -19,9 +19,9 @@ Continual flows of geothermal groundwater sustain permanent surface water, which
 
 Volcanically active areas from tropical to subpolar latitudes, often associated with subduction zones. Notable examples in northwest USA (Yellowstone), Iceland, New Zealand and the Atacama desert, Chile.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
