--- a/_EFGs/M1.1.md
+++ b/_EFGs/M1.1.md
@@ -23,9 +23,9 @@ Typically found in the subtidal zone on soft sedimentary substrates, but also oc
 
 Widely distributed along temperate and tropical coastlines of the world.
 
-## Map details
+{% include MAP.html %}
 
-Indicative maps of Seagrass meadows were obtained from Green & Short (2003).
+**Map details**: Indicative maps of Seagrass meadows were obtained from Green & Short (2003).
 
 ## References
 ### Text references
