--- a/_EFGs/M1.2.md
+++ b/_EFGs/M1.2.md
@@ -28,9 +28,9 @@ Kelp forests are limited by light, nutrients, salinity, temperature, and herbivo
 Nearshore rocky reefs to depths of 30 m in temperate and polar waters. Absent from warm tropical waters, but present in upwelling zones off Oman, Namibia, Peru and Galapagos.
 
 
-## Map details
+{% include MAP.html %}
 
-Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
+**Map details**: Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
 ## References
 
