--- a/_EFGs/M1.3.md
+++ b/_EFGs/M1.3.md
@@ -19,13 +19,12 @@ Coral reefs are limited to warm, shallow (rarely >60 m depth), clear, relatively
 
 Tropical and subtropical waters on continental and island shelves, mostly within latitudes of 30° N and S.
 
-## Map details
+{% include MAP.html %}
 
-Indicative maps of Photic coral reefs were obtained from Institute for Marine Remote Sensing et al. (2011).
+**Map details**: Indicative maps of Photic coral reefs were obtained from Institute for Marine Remote Sensing et al. (2011).
 
 ## References
 ### Text references
 * Sheppard C, Davy S, Pilling G, Graham N (2018) The biology of coral reefs. 2nd Edition. Oxford University Press, Oxford.
 ### Map References
 * Institute for Marine Remote Sensing, University of South Florida (IMaRS/USF), Institut de Recherche pour le Développement (IRD), UNEP-WCMC, The WorldFish Center, and WRI (2011) Global Coral Reefs composite dataset compiled from multiple sources for use in the Reefs at Risk Revisited project incorporating products from the Millennium Coral Reef Mapping Project prepared by IMaRS/USF and IRD.
-
