--- a/_EFGs/M1.9.md
+++ b/_EFGs/M1.9.md
@@ -23,7 +23,7 @@ Upwelling is a wind-driven process that draws cold, nutrient-rich water towards 
 
 The most productive upwelling zones are coastal, notably in four major eastern boundary current systems (Canary, Benguela, California, and Humboldt), although upwelling does also occur in the open ocean (e.g. along the Intertropical Convergence Zone).
 
-
+{% include MAP.html %}
 
 **Map details**: Marine ecoregions (Spalding et al. 2008) with major and minor occurrences of Upwelling zones were identified by consulting global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and expertise of authors. The identified ecoregions were then clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
