--- a/_EFGs/F1.3.md
+++ b/_EFGs/F1.3.md
@@ -19,9 +19,9 @@ These rivers are characterised by low winter temperatures and seasonal freeze/th
 
 Restricted to boreal, subarctic, alpine and subalpine regions, with limited examples in the subantarctic and Antarctic.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
