--- a/_EFGs/F1.4.md
+++ b/_EFGs/F1.4.md
@@ -19,9 +19,9 @@ Flow and flood regimes in these rivers are highly variable between monsoon and d
 
 Elevated regions in n tropical and subtropical monsoonal climates worldwide.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
