--- a/_EFGs/F3.3.md
+++ b/_EFGs/F3.3.md
@@ -19,13 +19,12 @@ Engineering of levees and channels enables water management to retain standing w
 
 More than a million square kilometres mostly in tropical and subtropical southeast Asia with small areas in Africa, Europe, South America, North America and Australia.
 
-## Map details
+{% include MAP.html %}
 
-Indicative map of Rice paddies was estimated from the percentage of rice cover at a 5′ resolution based on Monfreda et al. (2008).
+**Map details**: Indicative map of Rice paddies was estimated from the percentage of rice cover at a 5′ resolution based on Monfreda et al. (2008).
 
 ## References
 ### Text references
 * Fernando CJH (1993) Rice field ecology and fish culture—an overview.  Hydrobiologia 259: 91-113. / Liesack W, Schnell S, Revsbech NP (2000) Microbiology of flooded rice paddies. FEMS Microbiology Reviews 24: 625-645.
 ### Map References
 * Monfreda C, Ramankutty N, Foley JA (2008) Farming the planet: 2. Geographic distribution of crop areas, yields, physiological types, and net primary production in the year 2000. Global Biogeochemical Cycles 22: GB1022.
-
