--- a/_EFGs/F3.5.md
+++ b/_EFGs/F3.5.md
@@ -19,13 +19,12 @@ Engineered levees and channels enable managed water flow for human uses. The maj
 
 Urban landscapes and irrigation areas in temperate and subtropical latitudes.
 
-## Map details
+{% include MAP.html %}
 
-Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 ### Text references
 * Chester ET, Robson BJ (2013) Anthropogenic refuges for freshwater biodiversity: Their ecological characteristics and management. Biological Conservation 166: 64 – 75. / Nunes AL, Tricarico E, Panov VE, Cardoso AC, Katsanevakis S (2015) Pathways and gateways of freshwater invasions in Europe. Aquatic Invasions 10: 359 - 370. Ricciardi A (2006) Patterns of invasion in the Laurentian Great Lakes in relation to changes in vector activity. Diversity and Distributions 12: 425-433.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
