--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -25,7 +25,7 @@ In steep to moderate terrain throughout the humid tropical and temperate zones, 
 
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. Major occurrences in red, minor occurrences in yellow.
+**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
 ## References
 
