add diagrammatic assembly models for F1 and F2

--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -15,9 +15,9 @@ These riverine systems generally have low productivity and a relatively simple t
 
 These streams have flow regimes with high velocity and relatively low but reliable perennial volume. They flow down moderate to steep slopes causing considerable erosion and sediment transport. These factors drive nutrient and organic matter transport downstream induce turbulence, and hence are highly oxygenated. Flow volume and variability depends on rainfall seasonality, snowmelt in or from cold-climate catchments, as well as catchment size.
 
-# Diagramatic assembly model
+# Diagrammatic assembly model
 
-<img src="../assets/diagrams/F1.1.png" width="100%">
+{% include DAM.html %}
 
 # Distribution
 
