--- a/_EFGs/F1.2.md
+++ b/_EFGs/F1.2.md
@@ -15,9 +15,9 @@ Lowland rivers are usually productive environments and often have complex trophi
 
 These rivers are distinguished by shallow gradients (typically <2°), with low turbulence, low to moderate flow velocity and high to very high flow volumes which are continuous, but may vary seasonally, depending on catchment area and precipitation. This combination of features is most common at low altitudes within 200 m of sea level and rarely occurs above 1500m. River channels are wide and sometimes deep, with mostly soft sediment substrates. They are dominated by depositional processes, and so turbidity may be high, at least periodically. Overbank flows increase turbulence and turbidity. Locally or temporally important erosional processes have a role in sediment redistribution and geomorphic dynamism of depositional features (e.g. braided channels, point bars). Nutrient levels are relatively high due to large catchments and riparian/floodplain inputs, but depend on catchment geochemistry. Oxygen and temperatures vary with climate and catchment features. For catchments with extensive peatlands, waters may be tannin-rich, poorly oxygenated, acidic and dark, reducing productivity.
 
-# Diagramatic assembly model
+# Diagrammatic assembly model
 
-  {% include DAM.html %}
+{% include DAM.html %}
 
 # Distribution
 
