--- a/_EFGs/F1.3.md
+++ b/_EFGs/F1.3.md
@@ -15,6 +15,10 @@ In seasonally cold montane or boreal environments, the surfaces of streams freez
 
 These rivers are characterised by low winter temperatures and seasonal freeze/thaw regimes. Winter freezing is generally limited to the surface. Flows may continue below the ice or may be intermittent in smaller streams or dry climates. Freezing reduces resource availability by depleting oxygen levels and nutrient concentrations and reducing light penetration through the water. Light may also be attenuated at high latitudes and by high turbidity in erosional streams. Meltwaters drive increased flow and flooding in spring and summer. Carbon and nutrient concentrations are greatest during spring floods, and pH tends to decrease with flow during spring and autumn. When catchments include extensive peatlands, waters may be tannin-rich, acidic and dark, reducing light penetration and productivity.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Restricted to boreal, subarctic, alpine and subalpine regions, with limited examples in the subantarctic and Antarctic.
