--- a/_EFGs/F1.4.md
+++ b/_EFGs/F1.4.md
@@ -15,6 +15,10 @@ These seasonal riverine systems generally have low-moderate productivity and a r
 
 Flow and flood regimes in these rivers are highly variable between monsoon and dry seasons, with associated changes in water quality. They may be perennial or intermittent, with flows ceasing or much reduced in the dry season. Channels are narrow with steep to modearte gradients and seasonally high velocity and sometimes large volumes of water, producing overbank flows. This  results in considerable turbulence, turbidity and erosion during the wet season.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Elevated regions in n tropical and subtropical monsoonal climates worldwide.
