--- a/_EFGs/F1.5.md
+++ b/_EFGs/F1.5.md
@@ -15,6 +15,10 @@ These riverine systems can be highly productive with trophic structures and proc
 
 These rivers are driven by cyclical seasonal flow regimes. High-volume  flows and floods occur during the summer monsoon season, coinciding with warm temperatures. These are followed by drawdown of flows and flood residence times during the transition to the dry season,  low and disconnected flows during the dry season, and the initial flushing flows during transition to the wet season. Turbidity, light availability, erosion, sedimentation, lateral and longitudinal connectivity, biological activity and dissolved oxygen all vary with this seasonal cycle.  The strength and interannual variablity of this pattern varies  depending on the seasonality of catchment ranfall and the influences of non-monsoonal sources of water such as snow melt (e.g. south Asia). Streams may be single and multi-channelled or complex anabranching systems. There may be two flood peaks during the year in catchments located close to the equatorial zone.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Monsoonal regions of Asia, Africa, Australia and the Americas.
