--- a/_EFGs/F1.6.md
+++ b/_EFGs/F1.6.md
@@ -15,6 +15,10 @@ Intermittent streams have high temporal variability in flows and unpredictable r
 
 These systems are distinguished by highly episodic flows and flood regimes. Long dry periods are punctuated by high-volume flows of short duration (days to weeks, rarely months) which fill channels and flood other wetlands. Low gradients (typically <5°) result in low turbulence, and low to moderate flow velocity. Episodically high flow volumes depend on catchment size and precipitation. Overbank flows occur periodically. Lowland stream channels are broad, flat, sometimes deep and often anastomising, with mostly soft sandy sediments. Groundwater is typically within the rooting zone of perennial plants, which may establish in channels after flow events. Dominant depositional sedimentary processes generate periodically high turbidity. Locally or temporally important erosional processes have a role in sediment redistribution and geomorphic dynamism of depositional features (e.g.  braided channels, point bars). Upland streams are prone to erosive flash floods. Nutrient levels are relatively high due to large catchment areas and riparian inputs, but depend on catchment geochemistry. These rivers often flow over naturally saline soils and so salinity can be high, increasing in drying phases.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Throughout the world in arid and semi-arid mid latitudes, lowlands and uplands, but rarely above 1500m.
