--- a/_EFGs/F2.1.md
+++ b/_EFGs/F2.1.md
@@ -15,6 +15,10 @@ Large permanent freshwater lakes, generally exceeding 100 km2, are prominent lan
 
 Large water volumes influence resource availability, environmental stability (through thermal buffering) and niche diversity. Water is from catchment inflows, which may vary seasonally with climate. Large lakes influence regional climate through evaporation, cooling and convection feedbacks. These processes also influence nutrient availability, along with catchment and lake substrates and stratal mixing, which depends on inflow, depth, wind regimes and seasonal temperature variation. Monomictic stratification may thus occur in deeper lakes. Light varies with lake depth, turbidity, cloud cover and latitude.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Humid temperate and tropical regions on large land masses.
