--- a/_EFGs/F2.2.md
+++ b/_EFGs/F2.2.md
@@ -15,6 +15,10 @@ Small permanent freshwater lakes, pools or ponds are lentic environments with re
 
 These lakes may be hydrologically isolated or connected to rivers, either terminally or as flow-through systems. Key ecological drivers include catchment rainfall amount and seasonality, size, depth (mixing regime and light penetration), pH, nutrients and catchment resources. Seasonal cycles of temperature, inflow and wind (which drives vertical mixing) may generate monomictic temperature stratification regimes in deeper lakes. Seasonal factors such as light, increases in temperature and flows into lakes can induce breeding and recruitment.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mainly in humid temperate and tropical regions, but usually not semi-arid or arid regions.
