--- a/_EFGs/F2.3.md
+++ b/_EFGs/F2.3.md
@@ -15,6 +15,10 @@ These small (mostly <5 km2 in area) and shallow (<1 m deep), seasonal freshwater
 
 Annual filling and drying is driven by seasonal rainfall and flows and seasonally high evapotranspiration, mostly in monsoonal and Mediterranean climates with marked tropical ‘winters’ or temperate summers, respectively. Impermeable substrates (clay, bedrock) impede infiltration, usually in upper catchments or undulating lowlands. Small catchments, low-relief terrain, high area to volume ratios and hydrological isolation promote seasonal fluctuation. These hydrogeomorphic features also limit nutrient supply, in turn limiting pH buffering. High rates of organic decomposition, dentritification and sediment retention are driven by water fluctuations. High alkalinity reflects high anaerobic respiration. Groundwater flows may ameliorate hydrological isolation. Seasonal filling and drying induce much spatio-temporal variability in temperature, depth, pH, dissolved oxygen, salinity and nutrients, resulting in zonation within lakes and high variability among them.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mainly in sub-humid temperate and wet/dry tropical regions, in monsoonal and Mediterranean-type climates, but usually not semi-arid or arid regions.
