--- a/_EFGs/F2.4.md
+++ b/_EFGs/F2.4.md
@@ -15,6 +15,10 @@ The whole surface of these lakes is frozen for at least 40% of the year. Allocht
 
 Seasonal freeze-thaw cycles generate typically dimictic temperature stratification regimes, where cold water lies above warm water in winter and vice versa in summer. Shallow lakes are often polymictic during summer and may freeze completely during winter. Mixing occurs in autumn and spring. Freezing reduces light penetration and turbulence, enhancing depth gradients in temperature, oxygen and nutrients. Ice also limits atmospheric inputs, including gas exchange. Very low temperatures reduce growth rates, diversity and abundance of fish. Lake size varies from less than 1 ha to more than 30,000 km2, profoundly affecting niche diversity and trophic complexity. Freezing effects vary with the area and depth of lakes. Thawing is often accompanied by flooding in spring, ameliorating light and temperature gradients and increasing mixing. Dark water inflow from peatlands in catchments influence water chemistry, light penetration and productivity.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Predominantly across the high latitude northern hemisphere and high altitude South America.
