--- a/_EFGs/F2.5.md
+++ b/_EFGs/F2.5.md
@@ -15,6 +15,10 @@ Shallow ephemeral freshwater bodies are also known as depressions, playas, clay 
 
 Arid climates have highly variable hydrology. Episodic inundation after rain is relatively short (days to months) due to high evaporation rates and infiltration. Drainage systems are closed or nearly so, with channels or sheet inflow from flat, sparsely vegetated catchments. Inflows bring allochthonous organic matter and nutrients, and are typically turbid with fine particles. Clay-textured lake bottoms hold water by limiting percolation, but may include sand particles. Bottom sediments release nutrients rapidly after filling. The lakes are shallow and flat-bottomed with small volumes, so light and oxygen are generally not limiting. Persistent turbidity may limit light in the lake waters, but oxygen production by macrophytes and flocculation from increasing salinity during drying reduce turbidity over time. Shallow depth promotes high daytime water temperatures (when filling in summer) and high diurnal temperature variability.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Diagramatic assembly model
 
 {% include DAM.html %}
