--- a/_EFGs/F2.6.md
+++ b/_EFGs/F2.6.md
@@ -15,6 +15,10 @@ Permanent salt or soda lakes have waters with periodically or permanently high s
 
 Permanent salt lakes tend to be large and restricted to semi-arid climates with high evaporation, but with reliable inflow sources (e.g. snowmelt). They may be thousands of hectares in size and several metres deep. A few are much larger and deeper (e.g. Caspian Sea). Endorheic geomorphology promotes salt accumulation, but lake volume and reliable water inputs are critical to buffering salinity below extreme levels. Salinity nonetheless varies temporally upwards from 0.3%, rarely more than 10%, depending on lake size, temperature and the balance between freshwater inflows, precipitation and evaporation. Inflow is critical to ecosystem dynamics, partly by driving indirect effects of salinity on trophic or engineering processes. Salinity also varies between lakes due to differences in substrate and inflow. Within lakes, salt concentrations may be vertically stratified (meromictic) due to higher density of saltwater than freshwater inflow and slow mixing. Dissolved oxygen is inversely related to salinity, hence anoxia is common at depth in meromictic lakes. Ionic composition varies greatly, with carbonate, sulphate, sulphide, ammonia and/or phosphorus sometimes reaching high levels, and pH varying from 3 to 11.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mostly in semi-arid regions of Africa, Australia, Eurasia and western parts of North and South America.
