--- a/_EFGs/F2.7.md
+++ b/_EFGs/F2.7.md
@@ -15,6 +15,10 @@ Ephemeral salt lakes or playas have relatively short-lived wet phases and long d
 
 Ephemeral salt lakes are up to 10,000 km2 in area, and usually less than a few metres deep. They may be weakly vertically stratified (meromictic) due to slow mixing of freshwater inflow with higher density saltwater. Endorheic drainage promotes salt accumulation. Salinity varies temporally from 0.3% to over 26%, depending on lake size, depth temperature and the balance between freshwater inflows, precipitation and evaporation. Inflow is critical to ecosystem dynamics, by mediating wet-dry phases and driving indirect effects of salinity on trophic or ecosystem processes. Dissolved oxygen is inversely related to salinity, hence anoxia is common in hypersaline lake states. Ionic composition varies greatly, with carbonate, sulphate, sulphide, ammonia and/or phosphorus sometimes at high levels, and pH varying from 3 to 11.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mostly in arid and semi-arid Africa, Eurasia, Australia and north and south America.
