--- a/_EFGs/F2.8.md
+++ b/_EFGs/F2.8.md
@@ -15,6 +15,10 @@ These spring systems are groundwater-dependant because they are surrounded by dr
 
 Flow of artesian water to the surface is critical to these wetlands, which receive little input from precipitation or runoff.  Hydrological variability is low compared to other wetland types, but complex hydrological connections with deep regional aquifers, basin-fill and local watershed recharge drive lagged flow dynamics. Flows also vary over geological time frames, with evidence of cyclic growing, waning and extinction. Discharge waters tend to have elevated temperatures,  enriched  concentrations of minerals that reflect their geological origins. Precipitation of dissolved minerals (e.g. carbonates) and deposition by wind and water form characteristic cones or mounds known as "mound springs". Perennial flows and hydrological isolation from other spatially and temporally restricted surface waters makes these wetlands important ecological refuges in arid landscapes.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Scattered through arid regions in southern Africa, the Sahara and Middle East, central Eurasia, southwest of North America and Australia’s Great Artesian Basin.
