--- a/_EFGs/F2.9.md
+++ b/_EFGs/F2.9.md
@@ -15,6 +15,10 @@ contributors: DA Keith
 
 Continual flows of geothermal groundwater sustain permanent surface water, which may be clear or highly turbid with suspended solids, as in ‘mud volcanoes’. Water temperatures vary from hot (>44°C) to extreme (>80°C) across local gradients (vent pools, geysers, mounds, sinter aprons, terraces, outflow streams) and span wet-dry tropical, hot-desert, mild-temperate, alpine and polar climates. Mineral salts are concentrated, but composition varies greatly among sites according to the properties of underlying igneous material. Hence, pH is either extremely acid (2-4) or neutral-alkaline (7-11). Dissolved and precipitated minerals may include very high concentrations of silica, arsenic, antimony, iron, polonium, copper, zinc, cadmium, lead or mercury, usually as oxides, sulfides or sulfates, but nutrients such as nitrogen and phosphorus may be scarce.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Volcanically active areas from tropical to subpolar latitudes, often associated with subduction zones. Notable examples in northwest USA (Yellowstone), Iceland, New Zealand and the Atacama desert, Chile.
