--- a/_EFGs/F3.1.md
+++ b/_EFGs/F3.1.md
@@ -15,6 +15,10 @@ Rivers are impounded by construction of dam walls, creating large freshwater res
 
 Reservoirs receive water from the rivers which they impound. Human management to release or divert water compounds natural variability in inflow and evaporation, and may result in large variations in water level producing wide e.g. zones that are intermittently inundated or dry. This limits the productivity of water margins and the number of species able to persist there. Inflows may contain high concentrations of phosphorus and/or nitrogen (e.g. from sewerage treatment effluents or fertilised farmland), leading to eutrophication. Reservoirs in upper catchments generally receive less nutrients and cooler water (due to altitude) than those located downstream. Geomorphology, substrate and land use of the river basin influence the amount of inflowing suspended sediment, and hence turbidity, light penetration and productivity of planktonic and benthic algae, as well as rates of sediment build up on the reservoir floor. Wind-driven re-suspension of sediments increases supply of nutrients and organic particles in the water column, and reduces light available for photosynthesis. Depth gradients in light and oxygen, as well as thermal stratification, strongly influence the structure of biotic communities and trophic interactions, as do human introductions of fish, aquatic plants and other alien species.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Large reservoirs are scattered across all continents with greatest concentrations being in Asia, Europe and North America.
