--- a/_EFGs/F3.2.md
+++ b/_EFGs/F3.2.md
@@ -15,6 +15,10 @@ Shallow open water bodies have been constructed in a wide range of landscape and
 
 These water bodies are constructed for agriculture, mining, ornamentation or wastewater by earthworks that obstruct surface flow, groundwater seepage or headwater channels. Humans may regulate inputs of water, nutrients and chemicals, as well as water drawdown. Droughts and storms contribute to resource variability. Shallow depth and typically flat terrain exposes open water to rapid solar heating, and hence diurnally warm temperatures. Substrates are typically mud or gravel, but cobbles and debris of varied sizes may be added and organic material may accumulate over time, increasing habitat complexity. Nutrient levels are highest in wastewater or with runoff from fertilised agricultural land or urban surfaces. Some water sources (e.g. mines, industrial wastewater) have concentrated chemical toxins or high salinities. Humans may actively introduce and remove biota of various trophic levels (e.g. bacteria, algae, fish, macrophytes) for water quality management.
 
+# Diagrammatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Scattered across most regions of the world occupied by humans. Farm dams covered an estimated 77,000km2 globally in 2006.
