embedding the map details in the include file

--- a/_EFGs/F3.2.md
+++ b/_EFGs/F3.2.md
@@ -23,12 +23,14 @@ These water bodies are constructed for agriculture, mining, ornamentation or was
 
 Scattered across most regions of the world occupied by humans. Farm dams covered an estimated 77,000km2 globally in 2006.
 
-{% include MAP.html %}
-
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+{% include MAP.html details="Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors."%}
 
 ## References
+
 ### Text references
+
 * Chester ET, Robson BJ (2013.)Anthropogenic refuges for freshwater biodiversity: their ecological characteristics and management. Biological Conservation 166: 64-75. / Downing, JA, Prairie, YT, Cole, JJ, Duarte, CM, et al. (2006) The global abundance and size distribution of lakes, ponds, and impoundments. Limnology and Oceanography 51: 2388-2397. / Kloskowski J, Green AJ, Polak M, Bustamante J, Krogulec J (2009) Complementary use of natural and artificial wetlands by waterbirds wintering in Doñana, south‐west Spain. Aquatic Conservation: marine and freshwater ecosystems, 19: 815-826.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
