different method for passing a variable to the include

--- a/_EFGs/F3.2.md
+++ b/_EFGs/F3.2.md
@@ -23,7 +23,9 @@ These water bodies are constructed for agriculture, mining, ornamentation or was
 
 Scattered across most regions of the world occupied by humans. Farm dams covered an estimated 77,000km2 globally in 2006.
 
-{% include MAP.html map_det="Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors." %}
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
+{% include MAP.html %}
 
 ## References
 
