Fixed names of diagramm for F3.2 and F3.3

--- a/_EFGs/F3.2.md
+++ b/_EFGs/F3.2.md
@@ -31,7 +31,9 @@ Scattered across most regions of the world occupied by humans. Farm dams covered
 
 ### Text references
 
-* Chester ET, Robson BJ (2013.)Anthropogenic refuges for freshwater biodiversity: their ecological characteristics and management. Biological Conservation 166: 64-75. / Downing, JA, Prairie, YT, Cole, JJ, Duarte, CM, et al. (2006) The global abundance and size distribution of lakes, ponds, and impoundments. Limnology and Oceanography 51: 2388-2397. / Kloskowski J, Green AJ, Polak M, Bustamante J, Krogulec J (2009) Complementary use of natural and artificial wetlands by waterbirds wintering in Doñana, south‐west Spain. Aquatic Conservation: marine and freshwater ecosystems, 19: 815-826.
+* Chester ET, Robson BJ (2013.)Anthropogenic refuges for freshwater biodiversity: their ecological characteristics and management. Biological Conservation 166: 64-75.
+* Downing, JA, Prairie, YT, Cole, JJ, Duarte, CM, et al. (2006) The global abundance and size distribution of lakes, ponds, and impoundments. Limnology and Oceanography 51: 2388-2397.
+* Kloskowski J, Green AJ, Polak M, Bustamante J, Krogulec J (2009) Complementary use of natural and artificial wetlands by waterbirds wintering in Doñana, south‐west Spain. Aquatic Conservation: marine and freshwater ecosystems, 19: 815-826.
 
 ### Map References
 
