Maps for F1 biome

--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -23,15 +23,17 @@ These streams have flow regimes with high velocity and relatively low but reliab
 
 In steep to moderate terrain throughout the humid tropical and temperate zones, rarely extending to boreal latitudes.
 
-{% include MAP.html %}
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+{% include MAP.html %}
 
 ## References
 
 ### Text references
 
-* Giller PS., Giller P., Malmqvist B (1998) The biology of streams and rivers. Oxford University Press, Oxford. / Meyer JL, Wallace JB (2001) Lost linkages and lotic ecology: rediscovering small streams. Blackwell, Oxford. / Meyer JL, Strayer DL, Wallace JB, Eggert SL, Helfman GS, Leonard NE (2007) The contribution of headwater streams to biodiversity in river networks. Journal of the American Water Resources Association 43:  86–103.
+* Giller PS., Giller P., Malmqvist B (1998) The biology of streams and rivers. Oxford University Press, Oxford.
+* Meyer JL, Wallace JB (2001) Lost linkages and lotic ecology: rediscovering small streams. Blackwell, Oxford.
+* Meyer JL, Strayer DL, Wallace JB, Eggert SL, Helfman GS, Leonard NE (2007) The contribution of headwater streams to biodiversity in river networks. Journal of the American Water Resources Association 43:  86–103.
 
 ### Map References
 
