--- a/_EFGs/F1.3.md
+++ b/_EFGs/F1.3.md
@@ -23,12 +23,17 @@ These rivers are characterised by low winter temperatures and seasonal freeze/th
 
 Restricted to boreal, subarctic, alpine and subalpine regions, with limited examples in the subantarctic and Antarctic.
 
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
-
 ## References
+
 ### Text references
-* Guo LD, Cai YH, Belzile C, Macdonald RW (2012) Sources and export fluxes of inorganic and organic carbon and nutrient species from the seasonally ice-covered Yukon River. Biogeochemistry 107: 187-206. / Olsson TI (1981) Overwintering of benthic macroinvertebrates in ice and frozen sediment in a North Swedish river. Ecography 4: 161-166.
+
+* Guo LD, Cai YH, Belzile C, Macdonald RW (2012) Sources and export fluxes of inorganic and organic carbon and nutrient species from the seasonally ice-covered Yukon River. Biogeochemistry 107: 187-206.
+* Olsson TI (1981) Overwintering of benthic macroinvertebrates in ice and frozen sediment in a North Swedish river. Ecography 4: 161-166.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
