--- a/_EFGs/F1.4.md
+++ b/_EFGs/F1.4.md
@@ -23,12 +23,17 @@ Flow and flood regimes in these rivers are highly variable between monsoon and d
 
 Elevated regions in n tropical and subtropical monsoonal climates worldwide.
 
+{% capture map_det %} Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors. {% endcapture %}
+
 {% include MAP.html %}
 
-**Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
-
 ## References
+
 ### Text references
-* Davies PM, Bunn SE, Hamilton SK (2008) Primary production in tropical streams and rivers. In: Tropical stream ecology (Ed. D Dudgeon), pp. 23–42. Academic Press, London. / de Carvalho RA., Tejerina-Garro FL. (2018) Headwater-river gradient: trait-based approaches show functional dissimilarities among tropical fish assemblages. Marine and Freshwater Research 69: 574-584.
+
+* Davies PM, Bunn SE, Hamilton SK (2008) Primary production in tropical streams and rivers. In: Tropical stream ecology (Ed. D Dudgeon), pp. 23–42. Academic Press, London.
+* de Carvalho RA., Tejerina-Garro FL. (2018) Headwater-river gradient: trait-based approaches show functional dissimilarities among tropical fish assemblages. Marine and Freshwater Research 69: 574-584.
+
 ### Map References
+
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
